-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 4.13.0-beta1
-
None
Core::SettingsDialog puts the settings widget into a QScrollArea.
Commit faad83d5a37448b472af2efa76b7193c83f2c1f1 inserts another set of QScrollArea + QWidget under the whole form. This leads to two two of those and one is superfluous. When using a dark theme (e.g. flat-dark), this extra QScrollArea introduces wrong background color. Also, it complicates the already quite blown androidsettingswidget.ui.